tests/baselines/reference/declarationEmitToDeclarationDirWithoutCompositeAndDeclarationOptions.errors.txt
/foo/tsconfig.json(2,26): error TS5069: Option 'declarationDir' cannot be specified without specifying option 'declaration' or option 'composite'.
/foo/test.ts(4,16): error TS2693: 'Foo' only refers to a type, but is being used as a value here.


==== /foo/tsconfig.json (1 errors) ====
    {
        "compilerOptions": { "declarationDir": "out" }
                             ~~~~~~~~~~~~~~~~
!!! error TS5069: Option 'declarationDir' cannot be specified without specifying option 'declaration' or option 'composite'.
    }
    
==== /foo/test.ts (1 errors) ====
    interface Foo {
        x: number;
    }
    export default Foo;
                   ~~~
!!! error TS2693: 'Foo' only refers to a type, but is being used as a value here.
    